Fix size of elements which size is defined by their content
SQUASHED: AUTO-COMMIT-css-main.css,AUTO-COMMIT-inspector-containerView.js,AUTO-COMMIT-inspector-helper.js,

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  font-size: 14px;
 } 
 
 #created--root {
